configure the api address

--- a/registration/src/main/resources/application.properties
+++ b/registration/src/main/resources/application.properties
@@ -1,7 +1,9 @@
 spring.application.name=registration
 
- server.port=9000
+ server.port=9001
  
  logging.level.root=ERROR
  logging.level.com.openclassrooms=INFO
  logging.level.org.springframework.boot.web.embedded.tomcat=INFO
+
+ com.registration.registration.apiUrl=http://localhost:9000
